<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".javaClasses.SplashActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="3">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="160dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/toolbar"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="90dp"></LinearLayout>

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/splashlogo"/>


                </LinearLayout>


            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/app_slogan1"
                    android:textColor="@color/colordarkGrey"
                    android:textSize="@dimen/h2"
                    android:textStyle="bold"
                    android:gravity="center"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/app_slogan2"
                    android:textColor="@color/colordarkGrey"
                    android:textSize="@dimen/h2"
                    android:textStyle="bold"
                    android:gravity="center"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/app_complaintcell"
                    android:textColor="@color/colordarkGrey"
                    android:textSize="@dimen/h1"
                    android:layout_marginTop="@dimen/dist_10"
                    android:layout_marginBottom="@dimen/dist_10"
                    android:textStyle="bold"
                    android:gravity="center"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/app_Details"
                    android:layout_gravity="center"
                    android:padding="16dp"
                    android:textColor="@color/colordarkGrey"
                    android:textSize="@dimen/para"
                    android:gravity="center"
                    />





            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/app_poweredby"
                    android:layout_marginTop="@dimen/dist_20"
                    android:textColor="@color/colordarkGrey"
                    android:textSize="@dimen/h2"
                    android:textStyle="bold"
                    android:id="@+id/poweredby"
                    android:gravity="center"
                    />

                <ImageView
                    android:layout_below="@+id/poweredby"
                    android:id="@+id/footer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/footer"
                    android:layout_alignParentBottom="true"
                    />

            </RelativeLayout>

        </LinearLayout>



    </LinearLayout>

    <!--<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp">
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/logo"
            android:layout_gravity="center"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:background="@color/colorWhite"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_slogan1"
            android:textColor="@color/colorGreen"
            android:layout_gravity="center"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="20dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_slogan2"
            android:textColor="@color/colorGreen"
            android:layout_gravity="center"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="19dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_Details"
            android:padding="20dp"
            android:textColor="@color/colorGreen"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="15dp"/>

        <Button
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/loginbtn"/>

    </LinearLayout>

 &lt;!&ndash;   <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_slogan1"
            android:textColor="@color/colorGreen"
            android:layout_gravity="center"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="17dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_slogan2"
            android:textColor="@color/colorGreen"
            android:layout_gravity="center"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="17dp"/>
    </LinearLayout>&ndash;&gt;
-->


</LinearLayout>